hphp/test/zend7/Zend/tests/list_007.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %slist_007.php on line 3